# CAD2SLAM

./: CMakeLists.txt  README.md  package.xml
config/: demo.conf  demo_2.conf  demo_3.conf  diag.conf  eiii-0.conf  eiii-3.conf  launcher.srrg  mic.conf
config/data/: demo_2_augmented.graph  demo_2_initial.graph  demo_2_optimized.graph  demo_3_augmented.graph  demo_3_initial.graph  demo_3_optimized.graph  demo_augmented.graph  demo_initial.graph  demo_optimized.graph  diag_augmented.graph  diag_initial.graph  diag_optimized.graph  eiii-0_augmented.graph  eiii-0_initial.graph  eiii-0_optimized.graph  eiii-3_augmented.graph  eiii-3_initial.graph  eiii-3_optimized.graph
config/data/correspondences/: demo_2_correspondences.data  demo_3_correspondences.data  demo_correspondences.data  diag_correspondences.data  eiii-0_correspondences.data  eiii-3_correspondences.data  mic_correspondences.data
config/data/experiment_1_runs/: demo.txt  diag.txt  eiii-0.txt  eiii-3.txt  mic.txt
config/data/maps/: demo_cad.yaml  demo_slam.yaml  demo_slam_2.yaml  demo_slam_3.yaml  diag_cad.yaml  diag_slam.yaml  eiii-0_cad.yaml  eiii-0_slam.yaml  eiii-3_cad.yaml  eiii-3_slam.yaml  mic_cad.yaml  mic_slam.yaml
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  launch_correspondence_finder.cpp  launch_correspondence_visualizer.cpp  launch_experiment_1.cpp  launch_experiment_1_preparation.cpp  launch_experiment_3.cpp  launch_experiment_runner.cpp  launch_projector.cpp  planner_tests.cpp
src/cad2slam/: CMakeLists.txt  instances.cpp  instances.h
src/cad2slam/config_master/: config_master.cpp  config_master.h
src/cad2slam/correspondence_finders/manual_correspondence_finder/: manual_correspondence_finder.cpp  manual_correspondence_finder.h
src/cad2slam/data_structures/: correspondence_anchor.cpp  correspondence_anchor.h  correspondence_finder_info.h  keyframe_data.cpp  keyframe_data.h  path_poses.cpp  path_poses.h
src/cad2slam/graph_builder/: graph_builder.cpp  graph_builder.h
src/cad2slam/graph_optimizer/: graph_optimizer.cpp  graph_optimizer.h
src/cad2slam/map_manager/: map_manager.cpp  map_manager.h
src/cad2slam/projector/: projector.cpp  projector.h
src/cad2slam/utils/: comparator_utils.cpp  comparator_utils.h  experiments_runner.cpp  experiments_runner.h  graph_utils.cpp  graph_utils.h  image_utils.cpp  image_utils.h  lidar_simulator.cpp  lidar_simulator.h  path_planner.cpp  path_planner.h  pointcloud_utils.cpp  pointcloud_utils.h  results_utils.cpp  results_utils.h  yaml_utils.cpp  yaml_utils.h
src/cad2slam/variables_and_factors/: all_types.h  factor_keyframe2anchor.cpp  factor_keyframe2anchor.h  factor_keyframe2keyframe.cpp  factor_keyframe2keyframe.h  instances.cpp  instances.h  keyframe_se2.cpp  keyframe_se2.h
